add allauth and basic urls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,14 +13,14 @@
     "**/core.python*": true,
     "**/CVS": true
   },
-   "files.autoSave": "onFocusChange",
+  "files.autoSave": "onFocusChange",
   "editor.wordWrap": "on",
-  "workbench.colorTheme": "Community Material Theme Darker",
+  "workbench.colorTheme": "Community Material Theme Lighter",
   "terminal.integrated.gpuAcceleration": "canvas",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "[python]": {
     "editor.defaultFormatter": "ms-python.python"
   },
   "python.formatting.provider": "black",
-  "editor.quickSuggestionsDelay": 250,
+  "editor.quickSuggestionsDelay": 250
 }
