--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,7 @@
     "editor.defaultFormatter": "ms-python.python"
   },
   "python.formatting.provider": "black",
-  "editor.quickSuggestionsDelay": 250
+  "editor.quickSuggestionsDelay": 250,
+  "python.linting.flake8Enabled": false,
+  "python.linting.pylintEnabled": true
 }
