--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
 asgiref==3.5.0
+astroid==2.11.6
 black==22.3.0
 click==8.1.2
+dill==0.3.5.1
 Django==3.2
 django-allauth==0.41.0
+django-crispy-forms==1.14.0
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
 oauthlib==3.2.0
 pathspec==0.9.0
+Pillow==9.1.0
+platformdirs==2.5.2
+pylint==2.14.2
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
+tomli==2.0.1
+tomlkit==0.11.0
+typing_extensions==4.2.0
+wrapt==1.14.1
