--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ click==8.1.2
 dill==0.3.5.1
 Django==3.2
 django-allauth==0.41.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
+env==0.1.0
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
@@ -18,6 +20,7 @@ python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
+stripe==3.4.0
 tomli==2.0.1
 tomlkit==0.11.0
 typing_extensions==4.2.0
