--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.11.6
 black==22.3.0
 click==8.1.2
 dill==0.3.5.1
+dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.41.0
 django-countries==7.2.1
@@ -15,6 +16,7 @@ oauthlib==3.2.0
 pathspec==0.9.0
 Pillow==9.1.0
 platformdirs==2.5.2
+psycopg2-binary==2.9.3
 pylint==2.14.2
 python3-openid==3.2.0
 pytz==2022.1
