--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 env==0.1.0
+gunicorn==20.1.0
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
