--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.0
 astroid==2.11.6
 black==22.3.0
+boto3==1.24.22
+botocore==1.27.22
 click==8.1.2
 dill==0.3.5.1
 dj-database-url==0.5.0
@@ -8,9 +10,11 @@ Django==3.2
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-storages==1.12.3
 env==0.1.0
 gunicorn==20.1.0
 isort==5.10.1
+jmespath==1.0.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
 oauthlib==3.2.0
@@ -22,6 +26,7 @@ pylint==2.14.2
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 sqlparse==0.4.2
 stripe==3.4.0
 tomli==2.0.1
